--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
         .next-btn { display: none; width: 100%; margin-top: 20px; padding: 15px; background: var(--primary-color); color: white; border: none; border-radius: 10px; font-weight: bold; font-size: 1.1rem; cursor: pointer; }
         
-        /* リンクボタンのデザイン */
         .nav-section { margin-top: 30px; padding-top: 20px; border-top: 2px dashed #ccc; text-align: center; display: flex; flex-direction: column; gap: 10px; }
         .nav-btn { display: block; padding: 12px; border-radius: 30px; text-decoration: none; font-weight: bold; font-size: 0.9rem; transition: 0.3s; }
         .sim-link { background: #003366; color: white; }
@@ -50,7 +49,6 @@
 </div>
 
 <script>
-    // クイズのデータとロジックは前回と同じものを保持
     const quizData = [
         { 
             q: "土師ダム周辺の桜はおよそ何本？", 
@@ -63,7 +61,7 @@
             q: "CHEMISTRYのメンバーで八千代町出身なのは？", 
             a: ["堂珍 嘉邦", "川畑 要", "田丸 美寿々"], 
             c: 0,
-            ok: "大正解！八千代町の誇る歌声！",
+            ok: "大正解！八千代町の誇る歌声。のどごえ湖も彼にちなんでます！",
             no: "おっと！正解は堂珍さん。あの美声は八千代の空気で育ちました。"
         },
         { 
@@ -71,7 +69,7 @@
             a: ["高田湖", "八千代湖", "のどごえ湖"], 
             c: 1,
             ok: "正解！釣りにサイクリング、八千代の遊び場といえばここ！",
-            no: "ありゃ！正解は八千代湖。"
+            no: "ありゃ！正解は八千代湖。「のどごえ湖」は愛称なんです。"
         },
         { 
             q: "2100年の予測。八千代地区の人口は最悪何人まで減る？", 
@@ -81,18 +79,18 @@
             no: "実は880人。このままじゃ八千代お囃子が聞こえなくなるかも！？"
         },
         { 
-            q: "2045年の予測高齢化率は？", 
-            a: ["約35％", "約48％", "約60％"], 
-            c: 1,
-            ok: "正解！2人に1人が高齢者。おじいちゃんおばあちゃんを支えんと！",
-            no: "残念、約48％"
+            q: "2045年の目標人口は？", 
+            a: ["約1,000人", "約2,400人", "約3,000人"], 
+            c: 2,
+            ok: "正解！何もしないと2,400人ですが、目標は3,000人の維持です！",
+            no: "残念。目標は3,000人！今から準備して、活気ある町を残しましょう。"
         },
         { 
             q: "2045年の目標達成に、毎年必要な20代の若者定住数は？", 
             a: ["12名", "30名", "50名"], 
             c: 0,
-            ok: "ビンゴ！たった12人、されど12人。あなたもその一人かも？",
-            no: "正解は12名。野球チーム1つ分＋控え3人。意外といけそう？"
+            ok: "ビンゴ！毎年12人の若者が住み続ければ、3,000人体制が維持できます！",
+            no: "正解は12名。野球チーム1つ分＋控え。この『12人』が未来を救います！"
         },
         { 
             q: "2019年に入込観光客が51％増えた施設は？", 
@@ -151,9 +149,9 @@
     function showResult() {
         const ui = document.getElementById('quiz-ui');
         let title, comment, shogo, emoji;
-        if (score <= 3) { title = "伸びしろ日本一！"; comment = "産直市場で野菜食べて出直してきんさい！"; shogo = "八千代ビギナー"; emoji = "🌱"; }
-        else if (score <= 6) { title = "ええ感じじゃね！"; comment = "あなたはもう、立派な八千代通です。"; shogo = "八千代の賢者"; emoji = "🌸"; }
-        else { title = "八千代の神様！？"; comment = "これからはあなたが八千代の未来を導いてください！"; shogo = "八千代神"; emoji = "✨"; }
+        if (score <= 3) { title = "伸びしろ日本一！"; comment = "未来の八千代を支えるのは君だ！産直市場でエネルギー補給！"; shogo = "八千代ビギナー"; emoji = "🌱"; }
+        else if (score <= 6) { title = "ええ感じじゃね！"; comment = "目標の『3,000人・若者定住12人』を広めていきましょう！"; shogo = "八千代の賢者"; emoji = "🌸"; }
+        else { title = "八千代の神様！？"; comment = "完璧！あなたが八千代の未来を明るく照らすリーダーです！"; shogo = "八千代神"; emoji = "✨"; }
         ui.innerHTML = `<h1 style="border:none;">結果発表</h1><div style="text-align:center;"><div style="font-size:3rem; margin-bottom:10px;">${emoji}</div><div style="font-size:1.5rem; font-weight:bold; color:var(--primary-color); margin-bottom:5px;">${shogo}</div><p style="font-size:1.2rem; font-weight:bold;">${score} / 8 問正解</p><p style="padding:15px; background:#f9f9f9; border-radius:10px; font-size:0.9rem;">${comment}</p><button onclick="location.reload()" style="width:100%; padding:15px; border-radius:12px; background:var(--primary-color); color:white; border:none; font-weight:bold; cursor:pointer;">もう一度あそぶ</button></div>`;
     }
     initQuiz();
