--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             q: "CHEMISTRYのメンバーで八千代町出身なのは？", 
             a: ["堂珍 嘉邦", "川畑 要", "田丸 美寿々"], 
             c: 0,
-            ok: "大正解！八千代町の誇る歌声。のどごえ湖も彼にちなんでます！",
+            ok: "大正解！八千代町の誇る歌声！",
             no: "おっと！正解は堂珍さん。あの美声は八千代の空気で育ちました。"
         },
         { 
@@ -69,14 +69,14 @@
             a: ["高田湖", "八千代湖", "のどごえ湖"], 
             c: 1,
             ok: "正解！釣りにサイクリング、八千代の遊び場といえばここ！",
-            no: "ありゃ！正解は八千代湖。「のどごえ湖」は愛称なんです。"
+            no: "ありゃ！正解は八千代湖。"
         },
         { 
-            q: "2100年の予測。八千代地区の人口は最悪何人まで減る？", 
+            q: "現在3,688人の八千代町。2100年には最悪何人まで減る？", 
             a: ["約1,500人", "約2,000人", "約880人"], 
             c: 2,
-            ok: "その通り。880人…これはみんなでなんとかしないといけん数字！",
-            no: "実は880人。このままじゃ八千代お囃子が聞こえなくなるかも！？"
+            ok: "正解。3,688人が880人に…。なんと今の『1/4以下』になる計算です。（※2020年 国勢調査ベース）",
+            no: "実は880人。今の人口(3,688人)から考えると、1/4以下になってしまいます。（※2020年 国勢調査ベース）"
         },
         { 
             q: "2045年の目標人口は？", 
@@ -104,7 +104,7 @@
             a: ["若者移住最大化", "子どもたちの未来を守る", "デジタル世界一"], 
             c: 1,
             ok: "完璧！すべては未来の子供たちのために。熱いですね！",
-            no: "正解は「子どもたちの未来を守る」。これが八千代の魂です。"
+            no: "正解は「子どもたちの未来を守る」。これが、まちづくりの一番の根っこです。"
         }
     ];
 
@@ -158,3 +158,4 @@
 </script>
 </body>
 </html>
+
