--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         .nav-btn { display: block; padding: 12px; border-radius: 30px; text-decoration: none; font-weight: bold; font-size: 0.9rem; transition: 0.3s; }
         .sim-link { background: #003366; color: white; }
         .kagura-link { background: #8b0000; color: #d4af37; border: 1px solid #d4af37; }
+        /* 年齢入力欄をデカくする */
+        #userAge {
+            font-size: 40px;      /* 文字サイズ */
+            padding: 10px;
+            width: 150px;         /* 横幅 */
+            text-align: center;
+            border: 3px solid #ff9f43;
+            border-radius: 15px;
+            font-weight: bold;
+        }
+
+        /* ボタンもデカくする */
+        #calcBtn {
+            font-size: 20px;
+            padding: 15px 30px;
+            border-radius: 50px;
+        }
     </style>
 </head>
 <body>
@@ -158,4 +175,5 @@
 </script>
 </body>
 </html>
+
 
