--- a/mirai.html
+++ b/mirai.html
@@ -55,6 +55,24 @@
         .quiz-btn { background: #e8f5e9; color: #2e7d32; border: 2px solid #2e7d32; }
         .kagura-btn { background: #fdf2f2; color: #8b0000; border: 2px solid #8b0000; }
         .nav-btn:active { transform: scale(0.95); opacity: 0.8; }
+        /* 年齢入力欄をデカくする */
+        #userAge {
+            font-size: 40px;      /* 文字サイズ */
+            padding: 10px;
+            width: 150px;         /* 横幅 */
+            text-align: center;
+            border: 3px solid #ff9f43;
+            border-radius: 15px;
+            font-weight: bold;
+        }
+
+        /* ボタンもデカくする */
+        #calcBtn {
+            font-size: 20px;
+            padding: 15px 30px;
+            border-radius: 50px;
+            margin-top: 10px; /* ボタンの上に少し隙間を空ける */
+        }
     </style>
 </head>
 <body>
@@ -134,3 +152,4 @@
 </script>
 </body>
 </html>
+
