--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             no: "ありゃ！正解は八千代湖。"
         },
         { 
-            q: "現在3,688人の八千代町。2100年には最悪何人まで減る？", 
+            q: "現在3,688人の八千代町。<br>2100年には最悪何人まで減る？<br><span style='font-size:0.75rem; color:#666; font-weight:normal;'>（出典 2020年 国勢調査）</span>",
             a: ["約1,500人", "約2,000人", "約880人"], 
             c: 2,
-            ok: "正解。3,688人が880人に…。なんと今の『1/4以下』になる計算です。（※2020年 国勢調査ベース）",
-            no: "実は880人。今の人口(3,688人)から考えると、1/4以下になってしまいます。（※2020年 国勢調査ベース）"
+            ok: "正解。3,688人が880人に…。なんと今の『1/4以下』になる計算です。（※出典 2020年 国勢調査）",
+            no: "実は880人。今の人口(3,688人)から考えると、1/4以下になってしまいます。（※出典 2020年 国勢調査ベース）"
         },
         { 
             q: "2045年の目標人口は？", 
@@ -175,5 +175,6 @@
 </script>
 </body>
 </html>
+
 
 
