--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             no: "ありゃ！正解は八千代湖。"
         },
         { 
-            q: "現在3,688人の八千代町。<br>2100年には最悪何人まで減る？<br><span style='font-size:0.7rem; color:#888; font-weight:normal;'>※出典：2020年 国勢調査</span>", 
+            q: "現在3,688人の八千代町。<span style='font-size:0.6rem; color:#888; font-weight:normal;'>※出典：2020年 国勢調査</span><br>2100年には最悪何人まで減る？",
             a: ["約2,000人", "約1,500人", "約880人"], 
             c: 2,
             ok: "正解。3,688人が880人に…。なんと今の『1/4以下』になる計算です。（※2020年 国勢調査ベース）",
@@ -161,3 +161,4 @@
 </script>
 </body>
 </html>
+
