--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             ok: "正解。3,688人が880人に…。なんと今の『1/4以下』になる計算です。（※2020年 国勢調査ベース）",
             no: "実は880人。今の人口(3,688人)から考えると、1/4以下になってしまいます。（※2020年 国勢調査ベース）"
         },
-        { 
-            q: "2045年の目標人口は？<br><span style='font-size:0.7rem; color:#888; font-weight:normal;'>※安芸高田市 公表資料より</span>", 
-            a: ["約1,000人", "約2,400人", "約3,000人"], 
-            c: 2,
-            ok: "正解！何もしないと2,400人ですが、目標は3,000人の維持です！",
-            no: "残念。目標は3,000人！今から準備して、活気ある町を残しましょう。"
+       { 
+            q: "では、通過点の2045年。<br>このままだと人口は何人になる予測？<br><span style='font-size:0.6rem; color:#888; font-weight:normal;'>※安芸高田市 地域別構想より</span>", 
+            a: ["約3,000人", "約2,400人", "約1,500人"], 
+            c: 1, // 正解を「2,400人」にする
+            ok: "正解。ピーク時の半分、「約2,400人」まで減る予測です。だからこそ対策が必要なんです！",
+            no: "実は「約2,400人」。何もしないと、ピーク時の半分まで減ってしまう予測が出ています。"
         },
         { 
             q: "2045年の目標達成に、毎年必要な20代の若者定住数は？", 
@@ -161,4 +161,5 @@
 </script>
 </body>
 </html>
+
 
