--- a/mirai.html
+++ b/mirai.html
@@ -125,7 +125,7 @@
                     <td><div class="val-box good"><span class="item-name">人口</span><span class="item-val">1,500人</span></div></td>
                 </tr>
                 <tr>
-                    <td><div class="val-box bad"><span class="item-name">状況</span><span class="item-val" style="font-size:0.9rem;">存続危機</span></div></td>
+                    <td><div class="val-box bad"><span class="item-name">状況</span><span class="item-val" style="font-size:0.9rem;">消滅の可能性</span></div></td>
                     <td><div class="val-box good"><span class="item-name">状況</span><span class="item-val" style="font-size:0.9rem;">コンパクトな町</span></div></td>
                 </tr>
             </table>
@@ -183,3 +183,4 @@
 </script>
 </body>
 </html>
+
