--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             ok: "正解。ピーク時の半分、「約2,400人」まで減る予測です。だからこそ対策が必要なんです！",
             no: "実は「約2,400人」。何もしないと、ピーク時の半分まで減ってしまう予測が出ています。"
         },
-        { 
-            q: "2045年の目標達成に、毎年必要な20代の若者定住数は？", 
-            a: ["12名", "30名", "50名"], 
+       { 
+            q: "予測（2,400人）を覆し、3,000人を維持したい！<br>そのために毎年必要な若者の定住数は？<br><span style='font-size:0.6rem; color:#888; font-weight:normal;'>※人口推計シミュレーションによる試算</span>", 
+            a: ["12人", "30人", "50人"], 
             c: 0,
-            ok: "ビンゴ！毎年12人の若者が住み続ければ、3,000人体制が維持できます！",
-            no: "正解は12名。野球チーム1つ分＋控え。この『12人』が未来を救います！"
+            ok: "正解！「年間12人」＝「ひと月に1人」です。こう考えると、みんなで歓迎すれば実現できそうですよね！",
+            no: "正解は「12人」。ハードル高そうに見えますが、「1ヶ月に1人」来てくれれば達成できる数字なんです！"
         },
         { 
             q: "2019年に入込観光客が51％増えた施設は？", 
@@ -161,6 +161,7 @@
 </script>
 </body>
 </html>
+
 
 
 
