--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             no: "正解は「12人」。ハードル高そうに見えますが、「1ヶ月に1人」来てくれれば達成できる数字なんです！"
         },
         { 
-            q: "2019年に入込観光客が51％増えた施設は？", 
+            q: "2019年にお客さんが51％増えた施設は？", 
             a: ["美術館", "サイクリングターミナル", "八千代産直市場"], 
             c: 2,
             ok: "正解！あそこの産直野菜は最高に美味いけぇね！",
@@ -161,6 +161,7 @@
 </script>
 </body>
 </html>
+
 
 
 
