--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:url" content="https://tomi-labs.github.io/yachiyo_quiz/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="八千代町 未来へのクイズ＆シミュレーター">
+    <meta property="og:description" content="2100年、八千代町はどうなる？クイズとシミュレーターで未来をのぞいてみよう。">
+    <meta property="og:image" content="https://tomi-labs.github.io/yachiyo_quiz/ogp-image.jpg">
+    <meta property="og:site_name" content="八千代町の未来">
+    <meta property="og:locale" content="ja_JP">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+...
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>八千代町 未来へのクイズ</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
@@ -161,6 +170,7 @@
 </script>
 </body>
 </html>
+
 
 
 
